deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: validador-final
  namespace: validador-final
spec:
  type: NodePort
  selector:
    app: validador-final
  ports:
    - name: http
      port: 8000
      targetPort: http
      nodePort: 30091
